--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tpm2-tss (4.0.1-3deepin2) unstable; urgency=medium
+
+  * fix CVE-2024-29040 
+
+ -- zengwei <zengwei1@uniontech.com>  Wed, 24 Dec 2025 15:24:37 +0800
+
 tpm2-tss (4.0.1-3deepin1) unstable; urgency=low
 
   * esys: add SM4 algorithm support
